# model-loader

./: CMakeLists.txt  README.md  main.cpp
shaders/: light.fs  light.vs  mesh.fs  normalVisualization.fs  normalVisualization.gs  normalVisualization.vs
